--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,96 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  overflow: hidden;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-between;
+  padding: 20px 100px;
+  font-style: bold;
+  
+}
+.nav-middle-section{
+  display: flex;
+  gap: 30px;
+}
+.contact-btn{
+  border: 1px solid gray;
+  padding: 5px 20px;
+  border-radius: 20px;
+}
+.grid-container{
+  display: grid;
+  grid-template-columns:50vw 50vw;
+  width: 100vw;
+
+}
+@media screen and (max-width:680px) {
+  .grid-container{
+    grid-template-columns: 100%;
+
+  }
+}
+.grid-item{
+  padding: 10px;
+  height: 80vh;
+}
+.grid-item:nth-child(1){
+  padding-left: 80px;
+}
+.headingPart{
+  position: relative;
+}
+.circle{
+  top: 90%;
+  left: 65%;
+  position: absolute;
+  width: 150px;
+  height: 150px;
+  background: linear-gradient(to left bottom ,#f17500,#f7d771);
+  border-radius: 50%;
+  z-index: -1;
+  
+}
+.subHeading{
+ 
+  color: red;
+}
+.subHeading:nth-child(1){
+  margin-top: 70px;
+}
+.heading{
+  font-size: 90px;
+  line-height: 100px;
+
+}
+.description{
+
+}
+.hireMeBtn{
+  margin: 20px 0;
+  padding: 10px 40px;
+  background: blue;
   color: white;
+  font-style: bold;
+  font-weight: 800;
+  border-radius: 25px;
 }
-
-.App-link {
-  color: #61dafb;
+.iconHolder{
+margin-top: 50px;
+display: flex;
 }
+.icon{
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+}
+.downArrow{
+  margin-top: 20px;
+
+}
+.potrait{
+
 }
